<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.schedulerapp.ui.classes.ClassFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.schedulerapp.ui.exam.ExamFragment"
        android:label="@string/menu_exams"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.schedulerapp.ui.assignment.AssignmentFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_assignment" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.schedulerapp.ui.todo.TodoFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_todo" />
</navigation>