<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    tools:context=".ui.classes.EditClassPopUp">


    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="40dp"
        android:minWidth="200dp"
        android:text="@string/popup_edit_class"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@color/dark_purple"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditClassName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextEditClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:hint="@string/popup_class_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@color/dark_purple"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/courseTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name" />


    <Spinner
        android:id="@+id/spinnerClassEditStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/popup_start_time"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditProfessorName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditClassName" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_to"
        android:background="@color/dark_purple"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/editTextEditClassName"
        app:layout_constraintBottom_toTopOf="@id/editTextEditProfessorName"
        app:layout_constraintStart_toEndOf="@id/spinnerClassEditStartTime"
        app:layout_constraintEnd_toStartOf="@id/spinnerClassEditEndTime" />


    <Spinner
        android:id="@+id/spinnerClassEditEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/popup_end_time"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditProfessorName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditClassName"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/editTextEditProfessorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/popup_professor"
        android:background="@color/dark_purple"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="40dp"
        android:autofillHints="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_edit_confirm"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/delete_class_button"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/delete_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_edit_delete"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toStartOf="@id/cancel_button2"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/cancel_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_cancel"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>
