<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ui.exam.ExamPopUp">

    <TextView
        android:id="@+id/ExamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="40dp"
        android:minWidth="200dp"
        android:text="@string/add_exam"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editExamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/exam_name"
        android:autofillHints="name"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/ExamTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <DatePicker
        android:id="@+id/ExamDatePicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:datePickerMode="calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editExamName"
        app:layout_constraintWidth_percent="0.8" />


    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/exam_location"
        android:autofillHints="name"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ExamDatePicker" />


    <Button
        android:id="@+id/ExamAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_add"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ExamCancelButton"/>

    <Button
        android:id="@+id/ExamCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_cancel"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Spinner
        android:id="@+id/spinnerExamTime"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:hint="@string/popup_exam_time"
        android:minHeight="50dp"
        app:layout_constraintStart_toEndOf="@+id/editLocation"
        app:layout_constraintTop_toBottomOf="@+id/ExamDatePicker" />


</androidx.constraintlayout.widget.ConstraintLayout>