<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ui.assignment.AssignmentPopUp">

    <TextView
        android:id="@+id/assignmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="40dp"
        android:minWidth="200dp"
        android:text="@string/add_assignment"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editAssignmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/assignment_name"
        android:autofillHints="name"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/assignmentTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <DatePicker
        android:id="@+id/assignmentDatePicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:datePickerMode="calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAssignmentName"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintWidth_percent="0.8"/>

    <EditText
        android:id="@+id/editCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/course_name"
        android:autofillHints="name"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assignmentDatePicker" />

    <Button
        android:id="@+id/assignmentAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_add"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/assignmentCancelButton"/>

    <Button
        android:id="@+id/assignmentCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_cancel"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>